@@ -30,6 +30,14 @@ class WCS_Meta_Box_Schedule {
 			$the_subscription = wcs_get_subscription( $post->ID );
 		}
 
+		/**
+		 * Subscriptions without a start date are freshly created subscriptions.
+		 * In order to display the schedule meta box we need to pre-populate the start date with the created date.
+		 */
+		if ( 0 === $the_subscription->get_time( 'start' ) ) {
+			$the_subscription->set_start_date( $the_subscription->get_date( 'date_created' ) );
+		}
+
 		include dirname( __FILE__ ) . '/views/html-subscription-schedule.php';
 	}
 
